Fix image loading error